app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${IMAGE_NAME}
  namespace: merchant
  labels:
    app: ${IMAGE_NAME}
    squad: komunitas-pintar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${IMAGE_NAME}
  template:
    metadata:
      labels:
        app: ${IMAGE_NAME}
    spec:
      terminationGracePeriodSeconds: 30
      nodeSelector:
        warpin: services
      containers:
        - image: asia.gcr.io/warung-support/${IMAGE_NAME}:${IMAGE_VERSION}
          name: ${IMAGE_NAME}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /farhan-onboard/healthz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            livenessProbe:
              httpGet:
                path: /farhan-onboard/healthz
                port: 8080
              initialDelaySeconds: 30
              timeoutSeconds: 1
      imagePullSecrets:
        - name: gcr-json-key

---
apiVersion: v1
kind: Service
metadata:
  name: ${IMAGE_NAME}
  namespace: merchant
  labels:
    app: ${IMAGE_NAME}
spec:
  type: NodePort
  ports:
    - port: 50054
      name: http
      targetPort: 8080
      protocol: TCP
  selector:
    app: ${IMAGE_NAME}

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ${IMAGE_NAME}
  namespace: istio-system
spec:
  hosts:
    - onepiece-staging.warungpintar.co
  gateways:
    - staging-gateway.istio-system.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: "/farhan-onboard/"
      route:
        - destination:
            host: ${IMAGE_NAME}.merchant.svc.cluster.local
            port:
              number: 50054
      retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: gateway-error,connect-failure,refused-stream
